--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="assets/js/heatmap.min.js"></script>
+
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+<!-- <script src="https://unpkg.com/leaflet@0.7.7/dist/leaflet.js"></script> -->
+<script src="assets/js/geotiff.js"></script>
+<script src="assets/js/plotty.js"></script>
+
+<script src="assets/js/leaflet-geotiff.js"></script>
+
 </head>
 
 <body>
